# ps2-cmake-template

./: .gitignore  CMakeLists.txt  README.md
cmake/: PS2Toolchain.cmake
src/: CMakeLists.txt  mesh_data.h  teapot.c
